--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-social-icons": "^6.6.0",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
