--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.29.0",
     "react-social-icons": "^6.6.0",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
