--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/error-message": "^2.0.1",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "react-phone-number-input": "^3.3.7",
     "react-slick": "^0.29.0",
     "react-social-icons": "^6.6.0",
     "sharp": "^0.32.6",
