--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/error-message": "^2.0.1",
+    "axios": "^1.6.2",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
