--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.3.7",
     "react-slick": "^0.29.0",
     "react-social-icons": "^6.6.0",
